--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Edie Homepage</title>
+    <title>Edie Homepage -- devchallenges.io</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="#" class="header__logo">Edie</a>
+      <button aria-label="Open navigation" class="open-nav">&#9776;</button>
+
+      <nav class="header__nav">
+        <button aria-label="Close navigation" class="close-nav">&times;</button>
+
+        <ul class="header__list">
+          <li class="header__list__item"><a href="#" class="nav-link"></a>Home</li>
+          <li class="header__list__item"><a href="#" class="nav-link"></a>Services</li>
+          <li class="header__list__item"><a href="#" class="nav-link"></a>Our Works</li>
+          <li class="header__list__item"><a href="#" class="nav-link"></a>Clients</li>
+          <li class="header__list__item"><a href="#" class="nav-link"></a>Contact</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
