added footer markup

--- a/index.html
+++ b/index.html
@@ -23,5 +23,54 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="hero"></section>
+
+      <section class="services"></section>
+
+      <section class="our-works"></section>
+
+      <section class="team"></section>
+
+      <section class="testimonials"></section>
+    </main>
+
+    <footer>
+      <div class="footer__main">
+        <ul class="footer__list">
+          <li class="footer__list__item"><a href="#" class="nav-link"></a>Home</li>
+          <li class="footer__list__item"><a href="#" class="nav-link"></a>Services</li>
+          <li class="footer__list__item"><a href="#" class="nav-link"></a>Our Works</li>
+          <li class="footer__list__item"><a href="#" class="nav-link"></a>Clients</li>
+          <li class="footer__list__item"><a href="#" class="nav-link"></a>Contact</li>
+        </ul>
+
+        <div class="footer__socials">
+          <div class="footer__logo">Edie</div>
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
+            </li>
+          </ul>
+        </div>
+
+        <form action="">
+          <div class="shipping-address__form">
+            <label for="email">Want us to contact you?</label>
+            <input type="email" id="email" name="email" placeholder="Email" required />
+            <button class="footer__form__contact-btn">Join</button>
+          </div>
+        </form>
+      </div>
+
+      <span class="footer__signature">Created by xaviguasch - devChallenges.io</span>
+    </footer>
   </body>
 </html>
