added markup for hero section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
     </header>
 
     <main>
-      <section class="hero"></section>
+      <section class="hero">
+        <div class="hero__title-area">
+          <span class="hero__title-area__subtitle">Unhappy with your website?</span>
+          <h2 class="headline">We create beautiful and fast web services</h2>
+        </div>
+        <img
+          src="./resources/heroImage.jpg"
+          alt="employees' meeting"
+          class="hero__title-area__image"
+        />
+        <div class="hero__contact-area">
+          <h2 class="headline">Story, emotion and purpose</h2>
+          <p class="hero__contact-area__copy">
+            We help transform your ideas to real world applications that will outperform
+            your toughest competition and help you achieve your strategic goals in short
+            period of time.
+          </p>
+
+          <form action="">
+            <div class="form-area">
+              <label for="email">Want us to contact you?</label>
+              <input type="email" id="email1" name="email" placeholder="Email" required />
+              <button class="form__contact-btn">Join</button>
+            </div>
+          </form>
+        </div>
+      </section>
 
       <section class="services"></section>
 
@@ -62,10 +88,10 @@
         </div>
 
         <form action="">
-          <div class="shipping-address__form">
+          <div class="form-area">
             <label for="email">Want us to contact you?</label>
-            <input type="email" id="email" name="email" placeholder="Email" required />
-            <button class="footer__form__contact-btn">Join</button>
+            <input type="email" id="email2" name="email" placeholder="Email" required />
+            <button class="form__contact-btn">Join</button>
           </div>
         </form>
       </div>
