added our works section markup

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <main>
       <section class="hero">
-        <div class="hero__title-area">
-          <span class="hero__title-area__subtitle">Unhappy with your website?</span>
+        <div class="title-area">
+          <span class="title-area__subtitle">Unhappy with your website?</span>
           <h2 class="headline">We create beautiful and fast web services</h2>
         </div>
         <img
@@ -53,9 +53,76 @@
         </div>
       </section>
 
-      <section class="services"></section>
+      <section class="services">
+        <div class="title-area">
+          <h3 class="title-area__title">We offer high demand services</h3>
+        </div>
+        <div class="services__specializations">
+          <div class="services__specialization">
+            <div class="symbol"></div>
+            <h2 class="specialization-title">UI/UX Design</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
+              mollitia eum repellat ducimus veniam?
+            </p>
+            <button class="specialization-btn">Get Started</button>
+          </div>
+          <div class="services__specialization">
+            <div class="symbol"></div>
+            <h2 class="specialization-title">Front End</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
+              mollitia eum repellat ducimus veniam?
+            </p>
+            <button class="specialization-btn action-btn">Get Started</button>
+          </div>
+          <div class="services__specialization">
+            <div class="symbol"></div>
+            <h2 class="specialization-title">Back End</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
+              mollitia eum repellat ducimus veniam?
+            </p>
+            <button class="specialization-btn">Get Started</button>
+          </div>
+        </div>
+      </section>
 
-      <section class="our-works"></section>
+      <section class="our-works">
+        <div class="title-area">
+          <h3 class="title-area__title">Good design means good business</h3>
+        </div>
+        <div class="our-works__portfolio">
+          <div class="our-works__portfolio__example">
+            <img src="./resources/smarthome.jpg" alt="smart home dashboard" />
+            <p class="our-works__portfolio__example__description">
+              Full stack application
+            </p>
+            <p class="our-works__portfolio__example__title">Smart home dashboard</p>
+          </div>
+
+          <div class="our-works__portfolio__example">
+            <img src="./resources/onboard.png" alt="onboard application" />
+            <p class="our-works__portfolio__example__description">UI/UX design</p>
+            <p class="our-works__portfolio__example__title">Onboard application</p>
+          </div>
+
+          <div class="our-works__portfolio__example">
+            <img src="./resources/booking.png" alt="booking system" />
+            <p class="our-works__portfolio__example__description">Mobile application</p>
+            <p class="our-works__portfolio__example__title">Booking system</p>
+          </div>
+
+          <div class="our-works__portfolio__example">
+            <img src="./resources/juice-product.png" alt="Juice product homepage" />
+            <p class="our-works__portfolio__example__description">
+              Front End application
+            </p>
+            <p class="our-works__portfolio__example__title">Juice product homepage</p>
+          </div>
+        </div>
+        <button class="see-more">See more</button>
+      </section>
 
       <section class="team"></section>
 
