--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Edie Homepage -- devchallenges.io</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <a href="#" class="header__logo">Edie</a>
       <button aria-label="Open navigation" class="open-nav">&#9776;</button>
 
@@ -24,7 +29,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <section class="hero">
         <div class="title-area">
           <span class="title-area__subtitle">Unhappy with your website?</span>
@@ -45,9 +50,17 @@
 
           <form action="">
             <div class="form-area">
-              <label for="email">Want us to contact you?</label>
-              <input type="email" id="email1" name="email" placeholder="Email" required />
-              <button class="form__contact-btn">Join</button>
+              <label for="email" class="form-area-label">Want us to contact you?</label>
+              <div class="input-container">
+                <input
+                  type="email"
+                  id="email1"
+                  name="email"
+                  placeholder="Email"
+                  required
+                />
+                <button class="form__contact-btn">Join</button>
+              </div>
             </div>
           </form>
         </div>
@@ -55,7 +68,7 @@
 
       <section class="services">
         <div class="title-area">
-          <h3 class="title-area__title">We offer high demand services</h3>
+          <h3 class="headline">We offer high demand services</h3>
         </div>
         <div class="services__specializations">
           <div class="services__specialization">
@@ -129,7 +142,7 @@
       <section class="testimonials"></section>
     </main>
 
-    <footer>
+    <footer class="container">
       <div class="footer__main">
         <ul class="footer__list">
           <li class="footer__list__item"><a href="#" class="nav-link"></a>Home</li>
