added markup for team section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,37 @@
         <button class="see-more-btn">see more</button>
       </section>
 
-      <section class="team"></section>
+      <section class="team">
+        <div class="team-copy-section">
+          <span class="team-subheader">Meet the team</span>
+          <h2 class="team-header">We are chilled an a laidback team</h2>
+          <p class="team-copy-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+
+        <div class="team-gallery">
+          <div class="team-gallery-col-1">
+            <img
+              class="big-area__image"
+              src="./resources/person3.png"
+              alt="team girl picture"
+            />
+          </div>
+          <div class="team-gallery-col-2">
+            <img
+              class="big-area__image"
+              src="./resources/person1.png"
+              alt="team guy picture"
+            />
+            <img
+              class="big-area__image"
+              src="./resources/person2.png"
+              alt="team guy 2 picture"
+            />
+          </div>
+        </div>
+      </section>
 
       <section class="testimonials"></section>
     </main>
