added testimonials markup

--- a/index.html
+++ b/index.html
@@ -188,7 +188,23 @@
         </div>
       </section>
 
-      <section class="testimonials"></section>
+      <section class="testimonials">
+        <h2 class="headline">
+          “Fast and outstanding resutls. Edie understands their customer’s needs. They
+          have a young and talented team.”
+        </h2>
+        <div class="testimonials__copy">
+          <img
+            class="big-area__image"
+            src="./resources/person4.png"
+            alt="testimonal man picture"
+          />
+          <div class="testimonials__person">
+            <p class="testimonials__person-name">Carlos Tran</p>
+            <div class="testimonials__person-position">The Decorate Gatsby</div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="container">
