styled testimonials section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <section class="team">
         <div class="team-copy-section">
           <span class="team-subheader">Meet the team</span>
-          <h2 class="team-header">We are chilled an a laidback team</h2>
+          <h2 class="team-header">We are chilled and a laidback team</h2>
           <p class="team-copy-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
@@ -175,7 +175,7 @@
           </div>
           <div class="team-gallery-col-2">
             <img
-              class="big-area__image"
+              class="big-area__image team-person1"
               src="./resources/person1.png"
               alt="team guy picture"
             />
