styled testimonials section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </h2>
         <div class="testimonials__copy">
           <img
-            class="big-area__image"
+            class="testimonials__image"
             src="./resources/person4.png"
             alt="testimonal man picture"
           />
