--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/4274d2b2e7.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="./style.css" />
     <title>Edie Homepage -- devchallenges.io</title>
   </head>
@@ -207,38 +215,52 @@
       </section>
     </main>
 
-    <footer class="container">
-      <div class="footer__main">
-        <ul class="footer__list">
-          <li class="footer__list__item"><a href="#" class="nav-link"></a>Home</li>
-          <li class="footer__list__item"><a href="#" class="nav-link"></a>Services</li>
-          <li class="footer__list__item"><a href="#" class="nav-link"></a>Our Works</li>
-          <li class="footer__list__item"><a href="#" class="nav-link"></a>Clients</li>
-          <li class="footer__list__item"><a href="#" class="nav-link"></a>Contact</li>
-        </ul>
-
-        <div class="footer__socials">
-          <div class="footer__logo">Edie</div>
-          <ul class="footer__social-list">
-            <li class="footer__social-item">
-              <a href="#" class="footer__social-link"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li class="footer__social-item">
-              <a href="#" class="footer__social-link"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="footer__social-item">
-              <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
-            </li>
+    <footer>
+      <div class="footer-container">
+        <div class="footer__main">
+          <ul class="footer__list">
+            <li class="footer__list__item"><a href="#" class="nav-link"></a>Home</li>
+            <li class="footer__list__item"><a href="#" class="nav-link"></a>Services</li>
+            <li class="footer__list__item"><a href="#" class="nav-link"></a>Our Works</li>
+            <li class="footer__list__item"><a href="#" class="nav-link"></a>Clients</li>
+            <li class="footer__list__item"><a href="#" class="nav-link"></a>Contact</li>
           </ul>
-        </div>
 
-        <form action="">
-          <div class="form-area">
-            <label for="email">Want us to contact you?</label>
-            <input type="email" id="email2" name="email" placeholder="Email" required />
-            <button class="form__contact-btn">Join</button>
+          <div class="footer__socials">
+            <div class="footer__logo">Edie</div>
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link">
+                  <i class="fab fa-instagram-square"></i>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
+              </li>
+            </ul>
           </div>
-        </form>
+
+          <form action="">
+            <div class="form-area">
+              <label for="email" class="form-area-label">Want us to contact you?</label>
+              <div class="input-container">
+                <input
+                  type="email"
+                  id="email2"
+                  name="email"
+                  placeholder="Email"
+                  required
+                />
+                <button class="form__contact-btn">Join</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
 
       <span class="footer__signature">Created by xaviguasch - devChallenges.io</span>
