finished first version of mobile view version, pending tweaks to fix

--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
   </head>
   <body>
     <header class="header container">
-      <a href="#" class="header__logo">Edie</a>
-      <button aria-label="Open navigation" class="open-nav">&#9776;</button>
+      <div class="header__container">
+        <a href="#" class="header__logo">Edie</a>
+        <button aria-label="Open navigation" class="open-nav">&#9776;</button>
 
-      <nav class="header__nav">
-        <button aria-label="Close navigation" class="close-nav">&times;</button>
+        <nav class="header__nav">
+          <button aria-label="Close navigation" class="close-nav">&times;</button>
 
-        <ul class="header__list">
-          <li class="header__list__item"><a href="#" class="nav-link"></a>Home</li>
-          <li class="header__list__item"><a href="#" class="nav-link"></a>Services</li>
-          <li class="header__list__item"><a href="#" class="nav-link"></a>Our Works</li>
-          <li class="header__list__item"><a href="#" class="nav-link"></a>Clients</li>
-          <li class="header__list__item"><a href="#" class="nav-link"></a>Contact</li>
-        </ul>
-      </nav>
+          <ul class="header__list">
+            <li class="header__list__item"><a href="#" class="nav-link"></a>Home</li>
+            <li class="header__list__item"><a href="#" class="nav-link"></a>Services</li>
+            <li class="header__list__item"><a href="#" class="nav-link"></a>Our Works</li>
+            <li class="header__list__item"><a href="#" class="nav-link"></a>Clients</li>
+            <li class="header__list__item"><a href="#" class="nav-link"></a>Contact</li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="container">
