--- a/index.html
+++ b/index.html
@@ -92,15 +92,13 @@
             <button class="specialization-btn">Get Started</button>
           </div>
           <div class="services__specialization frontend-specialization">
-            <div class="inside-container">
-              <div class="symbol"></div>
-              <h2 class="specialization-title">Front End</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
-                mollitia eum repellat ducimus veniam?
-              </p>
-              <button class="specialization-btn action-btn">Get Started</button>
-            </div>
+            <div class="symbol"></div>
+            <h2 class="specialization-title">Front End</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
+              mollitia eum repellat ducimus veniam?
+            </p>
+            <button class="specialization-btn action-btn">Get Started</button>
           </div>
           <div class="services__specialization inside-container">
             <div class="symbol"></div>
@@ -119,7 +117,7 @@
           <h3 class="headline">Good design means good business</h3>
         </div>
         <div class="our-works__portfolio">
-          <div class="our-works__portfolio__example">
+          <div class="our-works__portfolio__example left-portfolio">
             <img
               class="big-area__image"
               src="./resources/smarthome.jpg"
@@ -141,7 +139,7 @@
             <p class="our-works__portfolio__example__title">Onboard application</p>
           </div>
 
-          <div class="our-works__portfolio__example">
+          <div class="our-works__portfolio__example left-portfolio">
             <img
               class="big-area__image"
               src="./resources/booking.png"
@@ -200,7 +198,7 @@
 
       <section class="testimonials">
         <h2 class="headline">
-          “Fast and outstanding resutls. Edie understands their customer’s needs. They
+          “Fast and outstanding results. Edie understands their customer’s needs. They
           have a young and talented team.”
         </h2>
         <div class="testimonials__copy">
