added mobile version tweaks

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           class="big-area__image"
         />
         <div class="hero__contact-area inside-container">
-          <h2 class="headline">Story, emotion and purpose</h2>
+          <h2 class="headline headline-helper">Story, emotion and purpose</h2>
           <p class="hero__contact-area__copy">
             We help transform your ideas to real world applications that will outperform
             your toughest competition and help you achieve your strategic goals in short
@@ -79,11 +79,13 @@
 
       <section class="services">
         <div class="title-area inside-container">
-          <h3 class="headline">We offer high demand services</h3>
+          <h3 class="headline headline-helper">We offer high demand services</h3>
         </div>
         <div class="services__specializations">
           <div class="services__specialization inside-container">
-            <div class="symbol"></div>
+            <div class="symbol">
+              <i class="fas fa-pen-square services-icon ux-icon"></i>
+            </div>
             <h2 class="specialization-title">UI/UX Design</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
@@ -91,8 +93,10 @@
             </p>
             <button class="specialization-btn">Get Started</button>
           </div>
-          <div class="services__specialization frontend-specialization">
-            <div class="symbol"></div>
+          <div class="services__specialization inside-container frontend-specialization">
+            <div class="symbol">
+              <i class="fas fa-code services-icon frontend-icon"></i>
+            </div>
             <h2 class="specialization-title">Front End</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
@@ -101,7 +105,9 @@
             <button class="specialization-btn action-btn">Get Started</button>
           </div>
           <div class="services__specialization inside-container">
-            <div class="symbol"></div>
+            <div class="symbol">
+              <i class="fas fa-server services-icon backend-icon"></i>
+            </div>
             <h2 class="specialization-title">Back End</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam
@@ -161,7 +167,7 @@
             <p class="our-works__portfolio__example__title">Juice product homepage</p>
           </div>
         </div>
-        <button class="see-more-btn">see more</button>
+        <button class="see-more-btn">see more <i class="fas fa-arrow-right"></i></button>
       </section>
 
       <section class="team">
