added js logic for the hamburger menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="header__nav">
           <button aria-label="Close navigation" class="close-nav">&times;</button>
 
-          <ul class="header__list">
+          <ul class="header__nav__list">
             <li class="header__list__item"><a href="#" class="nav-link"></a>Home</li>
             <li class="header__list__item"><a href="#" class="nav-link"></a>Services</li>
             <li class="header__list__item"><a href="#" class="nav-link"></a>Our Works</li>
@@ -271,5 +271,7 @@
 
       <span class="footer__signature">Created by xaviguasch - devChallenges.io</span>
     </footer>
+
+    <script src="./index.js"></script>
   </body>
 </html>
