--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
           <button aria-label="Close navigation" class="close-nav">&times;</button>
 
           <ul class="header__nav__list">
-            <li class="header__list__item"><a href="#" class="nav-link"></a>Home</li>
-            <li class="header__list__item"><a href="#" class="nav-link"></a>Services</li>
-            <li class="header__list__item"><a href="#" class="nav-link"></a>Our Works</li>
-            <li class="header__list__item"><a href="#" class="nav-link"></a>Clients</li>
-            <li class="header__list__item"><a href="#" class="nav-link"></a>Contact</li>
+            <li class="header__list__item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="header__list__item">
+              <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="header__list__item">
+              <a href="#our-works" class="nav-link">Our Works</a>
+            </li>
+            <li class="header__list__item">
+              <a href="#clients" class="nav-link">Clients</a>
+            </li>
+            <li class="header__list__item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -60,7 +68,7 @@
           </p>
 
           <form action="">
-            <div class="form-area">
+            <div class="form-area" id="contact">
               <label for="email" class="form-area-label">Want us to contact you?</label>
               <div class="input-container">
                 <input
@@ -77,7 +85,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section class="services" id="services">
         <div class="title-area inside-container">
           <h3 class="headline headline-helper">We offer high demand services</h3>
         </div>
@@ -93,7 +101,7 @@
             </p>
             <button class="specialization-btn">Get Started</button>
           </div>
-          <div class="services__specialization inside-container frontend-specialization">
+          <div class="services__specialization inside-container">
             <div class="symbol">
               <i class="fas fa-code services-icon frontend-icon"></i>
             </div>
@@ -118,7 +126,7 @@
         </div>
       </section>
 
-      <section class="our-works">
+      <section class="our-works" id="our-works">
         <div class="title-area inside-container">
           <h3 class="headline">Good design means good business</h3>
         </div>
@@ -202,7 +210,7 @@
         </div>
       </section>
 
-      <section class="testimonials">
+      <section class="testimonials" id="clients">
         <h2 class="headline">
           “Fast and outstanding results. Edie understands their customer’s needs. They
           have a young and talented team.”
@@ -225,11 +233,21 @@
       <div class="footer-container">
         <div class="footer__main">
           <ul class="footer__list">
-            <li class="footer__list__item"><a href="#" class="nav-link"></a>Home</li>
-            <li class="footer__list__item"><a href="#" class="nav-link"></a>Services</li>
-            <li class="footer__list__item"><a href="#" class="nav-link"></a>Our Works</li>
-            <li class="footer__list__item"><a href="#" class="nav-link"></a>Clients</li>
-            <li class="footer__list__item"><a href="#" class="nav-link"></a>Contact</li>
+            <li class="footer__list__item">
+              <a href="#" class="nav-link nav-link-footer">Home</a>
+            </li>
+            <li class="footer__list__item">
+              <a href="#services" class="nav-link nav-link-footer">Services</a>
+            </li>
+            <li class="footer__list__item">
+              <a href="#our-works" class="nav-link nav-link-footer">Our Works</a>
+            </li>
+            <li class="footer__list__item">
+              <a href="#clients" class="nav-link nav-link-footer">Clients</a>
+            </li>
+            <li class="footer__list__item">
+              <a href="#contact" class="nav-link nav-link-footer">Contact</a>
+            </li>
           </ul>
 
           <div class="footer__socials">
